Fix spacing of forum search

--- a/Knit/Code/Public/css/forum.css
+++ b/Knit/Code/Public/css/forum.css
@@ -104,7 +104,7 @@ label[for="indexView"], label[for="responsesView"], #indexView, #responsesView {
 }*/
 
 #forumSearchQ, #forumDiv {
-	margin: 0 1rem;
+	margin: 0 0.2rem 0 2.5rem;
 }
 
 @media only screen and (max-width:600px) {
